motd-service/k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: motd-service-destination
spec:
  host: motd-service
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: motd-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: motd
spec:
  hosts:
    - "*"
  gateways:
    - motd-gateway
  http:
    - match:
        - uri:
            prefix: /motd
      route:
        - destination:
            host: motd-service
            port:
              number: 8080
